<resources>
    <string name="app_name">scrcpy-lite</string>

    <string name="label_server_ip">Remote Device IP address</string>
    <string name="label_video_resolution">Resolution</string>
    <string name="label_video_bitrate">Bitrate</string>
    <string name="label_x">x</string>
    <string name="action_start">Start</string>
    <string name="appswitch_button">=</string>
    <string name="home_button">o</string>
    <string name="back_button">v</string>
    <string name="switch0">No Control  (check this if remote device control is not required)</string>
    <string name="switch1">Nav Bar  (check this if remote device does not have on-screen nav bar)</string>



    <string-array name="options_resolution_values">
        <item>3200x1440</item>
        <item>2400x1080</item>
        <item>2340x1080</item>
        <item>2248x1080</item>
        <item>1920x1080</item>
        <item>1600x720</item>
        <item>1280x720</item>
        <item>1200x540</item>
        <item>960x720</item>
        <item>800x448</item>
        <item>640x360</item>
    </string-array>

    <string-array name="options_bitrate_keys">
        <item>6 Mbps</item>
        <item>4 Mbps</item>
        <item>2 Mbps</item>
        <item>1 Mbps</item>
    </string-array>

    <integer-array name="options_bitrate_values">
        <item>6144000</item>
        <item>4096000</item>
        <item>2048000</item>
        <item>1024000</item>
    </integer-array>

</resources>


